# filemanager-hs

./: .gitignore  README.md  filemanager-hs.cabal
res/: layout.glade
src/: Main.hs
src/Files/: Data.hs  Errors.hs  Manager.hs  Operations.hs  Utils.hs
src/GUI/: Data.hs  DbUtils.hs  Events.hs  Events.hs-boot  Main.hs  MyGui.hs  MyView.hs  Popup.hs  Utils.hs
src/IO/: Utils.hs
