name:                filemanager-hs
version:             0.1.0.0
synopsis:            FileManager Haskell
homepage:            https://github.com/DronovIlya/filemanager-hs
license:             GPL-2
license-file:        LICENSE
author:              Ilya Dronov
maintainer:          dronoffilya@yandex.ru
copyright:           Copyright: (c) 2016 Ilya Dronov
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Files.Manager
                       Files.Utils
                       Files.Operations
                       Files.Data
                       Files.Errors
  build-depends:       base >= 4.7,
                       directory >= 1.1.0.0 && < 1.2.3.0,
                       process,
                       containers,
                       filepath >= 1.3.0.0,
                       unix,
                       time,
                       bytestring
  hs-source-dirs:      src                  
  default-language:    Haskell2010
  Default-Extensions:  PatternSynonyms
                       ViewPatterns,
                       FlexibleInstances

executable filemanager-hs-gtk
  main-is:             GUI/Main.hs
  other-modules:       GUI.Data
                       GUI.MyGui
                       GUI.MyView
                       GUI.Events
                       GUI.Utils
                       GUI.Popup
                       GUI.DbUtils
                       IO.Utils

  build-depends:       filemanager-hs,
                       base >= 4.7,
                       containers,
                       gtk3 >= 0.14.1,
                       glib >= 0.13,
                       directory >= 1.1.0.0 && < 1.2.3.0,
                       filepath >= 1.3.0.0,
                       unix,
                       stm,
                       acid-state,
                       transformers,
                       mtl,
                       safecopy,
                       process,
                       time
  hs-source-dirs:      src  
  default-language:    Haskell2010
  Default-Extensions:  PatternSynonyms
                       ViewPatterns,
                       FlexibleInstances